# Winamp--Now-Playing---plugin-skeleton

./: CMakeLists.txt  plugin.cpp  plugin.h  readme.md  resources.rc.in
